--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,10 +1,20 @@
 <div class="container m-3 p-0">
   <h1 class="fs-2">Restaurant</h1>
-  <%= render 'restaurant', restaurant: @restaurant %>
-  <h1 class="fs-3">Reviews</h1>
+  <%= render 'restaurants/restaurant', restaurant: @restaurant %>
+  <h1 class="fs-3 mt-3">Reviews</h1>
+
+  <% @reviews = @restaurant.reviews %>
   <% if !@reviews.empty? %>
     <%= render 'reviews/list', reviews: @reviews %>
   <% else %>
     <p>No reviews yet...</p>
   <% end %>
+  <h2 class="fs-5 fw-600 mt-3">Add new review for <%= @restaurant.name %> </h1>
+  <div id="new-review">
+  <%= simple_form_for [@restaurant, @review] do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating %>
+    <%= f.submit "Submit review", class: "btn btn-primary" %>
+  <% end %>
+  </div>
 </div>
